--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
 --Implement accessibility options on the engine level!
 --Create crossplatform level designer project.
 --Create Launcher project.
+--Add dynamic library loader for plugin activation and use in the engine. (Implement a scheduler Thread and define entrypoints for the libraries)
+--Add XML parsing hooks
+--Add LUA and PawnScript interpreters/hooks
+--Update Physics class
