Completed ScriptWrap in its compilable state
The engine is in a compilable state. Updated the classes that used
scripts so that they rely on the simpler API of ScriptWrap. ScriptWrap
encapsulate the more barebones APIs of the Python and Lua wrappers! I'm
proud of this addition!

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,9 +4,9 @@
 --Create Launcher project.
 --Add dynamic library loader for plugin activation and use in the engine. (Implement a scheduler Thread and define entrypoints for the libraries)
 --Add XML parsing hooks
---Add LUA and PawnScript interpreters/hooks
---Update Physics class
-=======
+--Create a Game class
+--Put everything together
+--Update Physics class=======
    --Finish asset registration tab
    --Create unit and tile creation tabs
 --Create Launcher project.
